# i3cex-i4c

./: .gitignore  CHANGELOG.md  GOVERNANCE.md  README.md
.github/workflows/: ci.yml
i3cex/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
i3cex/.github/workflows/: ci.yml
i3cex/docs/adr/: 0001-dual-track-architecture.md  0002-framing-comparative-prototyping.md  0003-simulation-hybrid-stack.md  0004-hatch-over-poetry.md  0005-preamble-wire-format.md  0006-tlv-length-encoding.md  0007-tlv-nesting-deferred.md  0008-tlv-max-block-size.md  0009-efficiency-principle.md  README.md  TEMPLATE.md
i3cex/scripts/: run_pytest.py
i3cex/src/i3cex/: __init__.py
i3cex/src/i3cex/confidence/: __init__.py
i3cex/src/i3cex/envelope/: __init__.py
i3cex/src/i3cex/framing/: __init__.py  preamble.py  tlv.py
i3cex/src/i3cex/fusion/: __init__.py
i3cex/src/i3cex/provenance/: __init__.py
i3cex/src/i3cex/qos/: __init__.py
i3cex/src/i3cex/sim/: __init__.py
i3cex/src/i3cex/timesync/: __init__.py
i3cex/tests/: __init__.py  conftest.py
i3cex/tests/cosim/: __init__.py
i3cex/tests/integration/: __init__.py
i3cex/tests/property/: __init__.py
i3cex/tests/property/framing/: __init__.py  test_preamble.py  test_tlv.py
i3cex/tests/unit/: __init__.py  test_package.py
i3cex/tests/unit/framing/: __init__.py  test_preamble.py  test_preamble_rejections.py  test_tlv.py
i3cex/tests/vectors/: README.md
i4c/: CHANGELOG.md  README.md
specs/: I3CEX-0.1.0-draft.md  I4C-0.0.1-placeholder.md  README.md
